@@ -77,6 +77,7 @@ pyqtgraph-0.9.9  [unreleased]
     - MeshData can generate edges from face-indexed vertexes
     - Fixed multiprocess deadlocks on windows
     - Fixed GLGridItem.setSize
+    - Fixed parametertree.Parameter.sigValueChanging
 
 pyqtgraph-0.9.8  2013-11-24
 
